--- a/assignments.html
+++ b/assignments.html
@@ -10,8 +10,9 @@
         <center>
             <h1> My Assignments MUMT 301</h1>
             <p> <a href="questionnaire.txt"> Assignment 1 </a>
-            <br> <a href="index.html"> Assignment 2 </a> </p>
-
+            <p> <a href="index.html"> Assignment 2 </a> </p>
+            <p> <a href="radiohead_home.html"> Assignment 3 </a> </p>
+<br>
             <p> <a href="index.html">  Back to Home Page </a> </p>
 
         </center>
