--- a/assignments.html
+++ b/assignments.html
@@ -12,6 +12,8 @@
             <p> <a href="questionnaire.txt"> Assignment 1 </a>
             <p> <a href="index.html"> Assignment 2 </a> </p>
             <p> <a href="radiohead_home.html"> Assignment 3 </a> </p>
+            <p> <a href="audiocomparison.html"> Assignment 4 </a> </p>
+
 <br>
             <p> <a href="index.html">  Back to Home Page </a> </p>
 
