--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>MUMT 301 Assignment 2</title>
+        <link rel="stylesheet" href="mainstyle.css"/>
     </head>
 <body>
 
@@ -18,12 +19,15 @@ night with some jazz music.</p>
 <img src="tibet_black_and_white.JPG" width="400" height="600">
 
 <h2>My Classes</h2>
+<div class="links">
 
 <a href="https://www.mcgill.ca/study/2021-2022/courses/mgcr-360">MGCR 360: Social Context of Business</a>
 <br><a href="https://www.mcgill.ca/study/2021-2022/courses/mumt-301">MUMT 301: Music and the Internet</a>
 <br>
+</div>
 
 <h2>Classmates' Repositories</h2>
+<div class="links">
     <a href="https://mumt301.github.io/SidAlHussaini/">Sid Al Hussaini</a>
 <br><a href="https://mumt301.github.io/Rebecca-Lee/">Rebecca Lee</a>
 <br><a href="https://mumt301.github.io/nicolesue/"> Nicole Sue </a> 
@@ -33,7 +37,7 @@ night with some jazz music.</p>
 <br><a href="https://mumt301.github.io/Sarah-Gao/">Sarah Gao</a>
 <br><a href="https://mumt301.github.io/beryl/">Beryl Arnould</a>
 <br><a href="https://mumt301.github.io/orosze/">Eric Orosz</a>
-
+</div>
 <h2>My Assignments</h2>
 <p> Here are my<a href="assignments.html"> Assigments</a> </p>
 
