--- a/assignments.html
+++ b/assignments.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title> Tibet Ahunbay Assignments </title>
+        <link rel="stylesheet" href="mainstyle.css"/>
 
     </head>
 
     <body>
+        <div class="links">
         <center>
+            <div class="links">
             <h1> My Assignments MUMT 301</h1>
             <p> <a href="questionnaire.txt"> Assignment 1 </a>
             <p> <a href="index.html"> Assignment 2 </a> </p>
@@ -16,8 +19,8 @@
 
 <br>
             <p> <a href="index.html">  Back to Home Page </a> </p>
-
         </center>
+    </div>
 
     </body>
 </html>
