--- a/assignments.html
+++ b/assignments.html
@@ -16,6 +16,7 @@
             <p> <a href="index.html"> Assignment 2 </a> </p>
             <p> <a href="radiohead_home.html"> Assignment 3 </a> </p>
             <p> <a href="audiocomparison.html"> Assignment 4 </a> </p>
+            <p> <a href="assignment_6.html"> Assignment 6 </a> </p>
 
 <br>
             <p> <a href="index.html">  Back to Home Page </a> </p>
