added final project

--- a/assignments.html
+++ b/assignments.html
@@ -18,6 +18,8 @@
             <p> <a href="audiocomparison.html"> Assignment 4 </a> </p>
             <p> <a href="assignment_6.html"> Assignment 6 </a> </p>
             <p> <a href="assignment_7.html"> Assignment 7 </a> </p>
+            <p> <a href="finalproject.html"> Final Project </a> </p>
+
 
 
 <br>
